--- a/details.html
+++ b/details.html
@@ -10,7 +10,7 @@
 </head>
 <body>
      <div class="container">
-         <div class="main-section">
+         <div class="main-section-details">
             <h1>Подробное опиание обьекта недвижимости</h1>
          </div>
      </div>
