--- a/details.html
+++ b/details.html
@@ -9,9 +9,8 @@
     <title>Test Avito Real-Estate</title>
 </head>
 <body>
-     <div class="container">
+     <div class="container main-container">
          <div class="main-section-details">
-            <h1>Подробное опиание обьекта недвижимости</h1>
          </div>
      </div>
      <script src="/dist/app.js"></script>
