--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="/dist/app.css">
     <title>Test Avito Real-Estate</title>
 </head>
 <body>
-     <div class="container">
+     <div class="container main-container">
          <div class="main-section">
-            <h1>Подробное опиание обьекта недвижимости</h1>
+            <h1>Список обьектов недвижимости</h1>
          </div>
      </div>
      <script src="/dist/app.js"></script>
